sme changes related to app.h

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,7 +2,7 @@ idf_component_register(
     SRCS
         "main.c"
         "src/uart.c"
-        "src/wifi.c"
+        "src/nvs.c"
     INCLUDE_DIRS
         "inc"
 )
